--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react-router": "^6.0.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "4.0.3",
+    "uid": "^2.0.0",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
