--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
+    "react-autocomplete-hint": "^1.3.0",
     "react-chartjs-2": "^3.3.0",
     "react-dom": "^17.0.2",
     "react-router": "^6.0.0",
